k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: support-priority-api
  namespace: support-priority
spec:
  replicas: 1
  selector:
    matchLabels:
      app: support-priority-api
  template:
    metadata:
      labels:
        app: support-priority-api
    spec:
      containers:
        - name: support-priority-api
          image: support-priority-api:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
